# wasm_test

./: .gitignore  .markdownlint.json
backend/: .gitignore  Cargo.toml  README.md  clippy.sh  coverage.sh  deny.toml  nextest.sh  rust-toolchain.toml  rustfmt.toml
backend/.cargo/: config.toml  nextest.toml
backend/src/: lib.rs
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: main.ts
