[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"] # 必須設定

[dependencies]
# 2025年時点の最新安定版を指定
wasm-bindgen = "0.2.106"
js-sys = "0.3"

# Web APIへのアクセス。機能ごとのfeatureフラグが必要
# [dependencies.web-sys]
# features =

# パニック時のスタックトレースをブラウザコンソールに表示version = "0.3"
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
